--- a/.github/workflows/contribution-screenshot.yml
+++ b/.github/workflows/contribution-screenshot.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: update the contribution graph
         run: |
-          git config --global user.name "Patrick Humpal (via GitHub Actions)"
-          git config --global user.email "654902+phumpal@users.noreply.github.com"
+          git config --global user.name "NetVilla (via GitHub Actions)"
+          git config --global user.email "29592764+netvilla@users.noreply.github.com"
           git add assets/contributions.png
           git commit -m "Nightly actions update to contribution graph" || exit 0
           git push
